<resources>
    <string name="app_name">Buildmypc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choose_your_cpu">Choose Your CPU</string>
    <string name="choose_your_motherboard">Choose Your Motherboard</string>
    <string name="price">Price</string>
    <string name="cores">Cores</string>
    <string name="speed">Speed</string>
    <string name="model">Model</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sockettype">Socket type</string>
    <string name="graphics_card">Graphics Card</string>
    <string name="hdd">HDD</string>
    <string name="psu">PSU</string>
    <string name="rams">Rams</string>
    <string name="built_my_pc">Built My Pc</string>
    <string name="www_builtmypc_com">www.builtmypc.com</string>

</resources>
